Fixes the warning block
* src/app/browser_action/browser_action.html: Adds the `.expand-block`
  functionality.

* src/app/browser_action/browser_action.js (allowFeedback.onchange):
  Adds stricter conditions.
* (addWarning): Refactors the function to use the `.expand-block`
  functionality and allow setting the `allowFeedback` and
  `siteOnWhitelist` checkboxes.

--- a/src/app/browser_action/browser_action.html
+++ b/src/app/browser_action/browser_action.html
@@ -36,7 +36,11 @@
             <span class="info-text"></span>
           </div>
         </div>
-        <div class="warning-block expand-block"><span class="button fa warning-icon">&#xf071;</span><span id="warning-text"></span></div>
+        <div class="warning-block expand-block">
+          <div class="expand-inner">
+            <span class="button fa warning-icon">&#xf071;</span><span id="warning-text"></span>
+          </div>
+        </div>
       </div>
     </div>
     <script src="browser_action.js"></script>
